--- a/CopilotKit/packages/react-ui/src/css/suggestions.css
+++ b/CopilotKit/packages/react-ui/src/css/suggestions.css
@@ -15,7 +15,7 @@
   font-size: 0.7rem;
   border-radius: 15px;
   border: 1px solid var(--copilot-kit-muted-color);
-  color: var(--copilot-kit-text-color);
+  color: var(--copilot-kit-secondary-contrast-color);
   box-shadow: 0 5px 5px 0px rgba(0,0,0,.01),0 2px 3px 0px rgba(0,0,0,.02);
 }
 
@@ -23,7 +23,7 @@
   padding: 0;
   font-size: 0.7rem;
   border: none;
-  color: var(--copilot-kit-text-color);
+  color: var(--copilot-kit-secondary-contrast-color);
 }
 
 .copilotKitMessages footer .suggestions button {
